Just finished the Login Screen

--- a/login.css
+++ b/login.css
@@ -17,7 +17,6 @@ input{
     border-radius: 15px;
 
 }
-
 button{
     border: none;
     border-radius: 10px;
@@ -27,30 +26,26 @@ button{
 
 }
 button:hover{
-    transition: background-color 167ms ease-in, color 200ms ease;
-    cursor: pointer;
+transition: background-color 167ms ease-in, color 200ms ease;
+cursor: pointer;
 background-color: white;
 color: #333a44 
 }
 
-.fullContainer{
-    background-color: rgba(0, 89, 255, 0.348);
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-    height: 100vh;
 
-}
-.UserInput-Container{
-    display: flex;
+.container{
+    transform: translate(33.5vw ,30vh);
+    background-color: rgb(76, 54, 198);
+    display: inline-flex;
     flex-direction: column;
     gap: 20px;
-    transform: translateY(15%);
-    margin: auto;
-}
-.UserInput-Container .inputs form,
-.UserInput-Container .title{
+    padding: 10px;
+    border: none;
+    border-radius: 50%;
     
+}
+
+.login form, .title{
     border-radius: 10px;
     display: flex;
     flex-direction: column;
